Add coverage instrumentation to haz3lmenhir library

--- a/src/haz3lmenhir/dune
+++ b/src/haz3lmenhir/dune
@@ -2,6 +2,8 @@
  (name haz3lmenhir)
  (libraries util re sexplib unionFind haz3lcore)
  (modules AST Conversion Interface Lexer Parser)
+ (instrumentation
+  (backend bisect_ppx))
  (preprocess
   (pps ppx_let ppx_sexp_conv ppx_deriving.show ppx_yojson_conv)))
 
