--- a/src/haz3lcore/dune
+++ b/src/haz3lcore/dune
@@ -2,7 +2,7 @@
 
 (library
  (name haz3lcore)
- (libraries util sexplib unionFind uuidm virtual_dom yojson core)
+ (libraries util sexplib unionFind uuidm virtual_dom yojson core omd)
  (js_of_ocaml)
  (instrumentation
   (backend bisect_ppx))
