--- a/browsertest/tsconfig.json
+++ b/browsertest/tsconfig.json
@@ -4,6 +4,7 @@
 		"noImplicitAny": true,
 		"removeComments": false,
 		"preserveConstEnums": true,
+        "esModuleInterop": true,
 		"sourceMap": true,
 		"outDir": "./dist",
 		"rootDir": "./",
