--- a/hazel.opam
+++ b/hazel.opam
@@ -14,6 +14,7 @@ depends: [
   "reason" {>= "3.12.0"}
   "ppx_yojson_conv_lib"
   "ppx_yojson_conv"
+  "incr_dom"
   "bisect_ppx"
   "omd" {>= "2.0.0~alpha4"}
   "ezjs_idb"
@@ -25,6 +26,9 @@ depends: [
   "ocamlformat"
   "junit_alcotest" {with-test}
   "ocaml-lsp-server"
+  "qcheck"
+  "qcheck-alcotest"
+  "ppx_deriving_qcheck"
   "odoc" {with-doc}
 ]
 build: [
